bugfix: remove whitespace

--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -34,7 +34,7 @@
 
 @media screen and (max-height: 405px) {
   .popup__close-btn {
-    top: 0
+    top: 0;
   }
 }
 
